# jsonwatch

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  jsondiff.py  jsonwatch.cabal  jsonwatch.py  justfile  setup.py  stack.yaml
.github/workflows/: ci.sh  ci.yml
app/: Main.hs
jsonwatch/: __init__.py  jsondiff.py  jsonwatch.py
jsonwatch/tests/: __init__.py
src/: lib.rs  main.rs
src/JsonWatch/: Diff.hs  Format.hs  Path.hs  Watch.hs
src/diff/: mod.rs
src/jsonwatch/: __init__.py  jsondiff.py  jsonwatch.py
src/jsonwatch/tests/: __init__.py
src/lcs/: mod.rs
test/: Spec.hs  weather1.json  weather2.json
tests/: e2e.test  integration.tcl  integration.test
