[package]
name = "jsonwatch"
version = "0.7.0"
authors = ["D. Bohdan <dbohdan@dbohdan.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dbohdan/jsonwatch"
homepage = "https://github.com/dbohdan/jsonwatch"
description = "Track changes in JSON data from the command line"
keywords = ["json"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "~0.4"
clap = {features = ["derive"], version = "~4.5"}
serde_json = {features = ["preserve_order"], version = "~1.0"}
ureq = "~2.9"
