name:                jsonwatch
version:             0.3.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dbohdan/jsonwatch#readme
license:             MIT
license-file:        LICENSE
author:              dbohdan
maintainer:          dbohdan@dbohdan.com
copyright:           2014, 2015, 2017 dbohdan
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JsonWatch.Diff, JsonWatch.Watch
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0 && < 2
                     , bytestring >= 0.10 && < 0.11
                     , text >= 1.2 && < 2
                     , time >= 1.6 && < 2
                     , unordered-containers >= 0.2.7 && < 0.3
                     , vector >= 0.11 && < 0.12
  default-language:    Haskell2010

executable jsonwatch
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jsonwatch
                     , aeson >= 1.0 && < 2
                     , bytestring >= 0.10 && < 0.11
                     , http-client >= 0.5 && < 0.6
                     , http-client-tls >= 0.3 && < 0.4
                     , optparse-applicative >= 0.13 && < 0.14
                     , process >= 1.4 && < 2
                     , text >= 1.2 && < 2
  default-language:    Haskell2010

test-suite jsonwatch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson >= 1.0.2.1 && < 2
                     , hspec >= 2.4 && < 3
                     , jsonwatch
                     , text >= 1.2 && < 2
                     , unordered-containers >= 0.2.7 && < 1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbohdan/jsonwatch
