name:                jsonwatch
version:             0.3.3.0
-- synopsis:
-- description:
homepage:            https://github.com/dbohdan/jsonwatch#readme
license:             MIT
license-file:        LICENSE
author:              dbohdan
maintainer:          dbohdan@dbohdan.com
copyright:           2014, 2015, 2017, 2018 dbohdan
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     JsonWatch.Diff
                     , JsonWatch.Format
                     , JsonWatch.Path
                     , JsonWatch.Watch
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.3 && < 1.4
                     , aeson-pretty >= 0.8.2 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5.7.1 && < 0.6
                     , edit-distance-vector >= 1.0 && < 1.1
                     , scientific >= 0.3.4 && < 0.4
                     , string-conversions >= 0.4 && < 0.5
                     , text >= 1.2 && < 1.3
                     , time >= 1.8 && < 1.9
                     , unordered-containers >= 0.2.7 && < 0.3
                     , utf8-string >= 1.0.1.1 && < 1.1
                     , vector >= 0.12 && < 0.13
  default-language:    Haskell2010

executable jsonwatch
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jsonwatch
                     , bytestring >= 0.10 && < 0.11
                     , http-client >= 0.5 && < 0.6
                     , http-client-tls >= 0.3 && < 0.4
                     , optparse-applicative >= 0.14 && < 0.15
                     , process >= 1.6 && < 1.7
                     , text >= 1.2 && < 1.3
                     , utf8-string >= 1.0.1.1 && < 1.1
  default-language:    Haskell2010

test-suite jsonwatch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jsonwatch
                     , aeson >= 1.3 && < 1.4
                     , containers >= 0.5.7.1 && < 0.6
                     , hspec >= 2.5 && < 2.6
                     , text >= 1.2 && < 1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbohdan/jsonwatch
